# oscil

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  SOLUTION_SUMMARY.md  architecture.md  beast-tasks.md  check_app_status.sh  debug_plugin.sh  debug_processBlock.cpp  debug_trigger.cpp  prd.md  tasks.md  test_plugin_fix.sh  ui-prd.md
.cache/clangd/index/: AdvancedDecimationProcessor.cpp.7AF3E3386072E397.idx  AdvancedDecimationProcessor.h.BCA5A97588C5C4E9.idx  BgfxOscilloscopeComponent.cpp.3119E3749F9C56C8.idx  BgfxOscilloscopeComponent.h.F6D0F657D173D611.idx  BgfxPlatform_mac.mm.68069B1B22B66EE4.idx  BgfxRendererBackend.cpp.23D6B6A98689D5EE.idx  ColorTheme.cpp.4452EB14A8645A7A.idx  ColorTheme.h.355140530D989219.idx  CorrelationMeterComponent.cpp.A04B6AA044E9D2A2.idx  CorrelationMeterComponent.h.0326E16E2EF21B92.idx  DebugLogger.cpp.7AC4AAFFC774E771.idx  DebugLogger.h.E990460C44043B71.idx  DecimationProcessor.cpp.E27A122F9F8BEDF7.idx  DecimationProcessor.h.AA821D452602365A.idx  GpuRenderHook.cpp.CE5076FB1F2CB04E.idx  GpuRenderHook.h.39C3692601E19F28.idx  LayoutManager.cpp.68340BFF32151DDC.idx  LayoutManager.h.4C2F94C850ACE7EB.idx  MeasurementData.cpp.13931C361A8D3F8D.idx  MeasurementData.h.CCC4AA6B11F7D85B.idx  MeasurementOverlayComponent.cpp.F6B8A5508E98F2F7.idx  MeasurementOverlayComponent.h.68567610C0BE9023.idx  MultiTrackEngine.cpp.1239868696A7E690.idx  MultiTrackEngine.h.BDBD00EA4A588220.idx  OpenGLManager.cpp.9823917920471802.idx  OpenGLManager.h.5A01DA2FF9DC332A.idx  OscilloscopeComponent.cpp.3738C653B095C96E.idx  OscilloscopeComponent.cpp.FD7D63AB8AC8100C.idx  OscilloscopeComponent.h.54B08D64ED266F8A.idx  OscilloscopeComponent.h.DF16D7E7D9A0B33E.idx  PerformanceMonitor.cpp.7D2B4D9C708BF8FC.idx  PerformanceMonitor.h.8270AA7F885C25AA.idx  PluginEditor.cpp.3065EA383B57ED71.idx  PluginEditor.cpp.DB51A95EA6061AE1.idx  PluginEditor.h.8941723D2535BF6B.idx  (+44 more)
.chatmodes/: beast-knowledge.md  beast-prd.md  beast-tasks.md
.github/workflows/: ci.yml  codeql.yml
.specstory/history/: 2025-08-21_18-08Z-please-set-up-a-new-project.md  2025-08-21_19-13Z-initial-commit-to-github-repository.md  2025-08-21_19-23Z-pushing-project-to-github-repository.md  2025-08-21_20-19Z-creating-architecture-and-folder-structure-for-plugin-project.md  2025-08-21_20-40Z-setting-upstream-branch-for-git-push.md  2025-08-21_20-41Z-reorganizing-oscil-plugin-file-structure-and-imports.md  2025-08-21_20-50Z-read-architecture-md.md  2025-08-21_21-53Z-render-pipeline-review-and-troubleshooting-steps.md  2025-08-22_04-10Z-diagnosing-and-fixing-black-plugin-window-issue.md  2025-08-22_06-08Z-implementing-offscreen-gpu-rendering-with-juce-integration.md  2025-08-22_15-49Z-debugging-and-testing-strategy-for-audio-plugin-rendering.md  2025-08-22_17-47Z-removing-bgfx-and-updating-juce-plugin-code.md  2025-08-22_18-18Z-running-the-standalone-app-for-testing.md  2025-08-22_18-31Z-task-implementation-and-testing-plan-overview.md  2025-08-22_18-36Z-completion-of-opengl-acceleration-scaffold-in-juce.md  2025-08-22_18-54Z-completion-of-opengl-renderer-abstraction-hook-task.md  2025-08-22_19-13Z-implementing-task-2-1-audio-thread-communication.md  2025-08-22_19-28Z-trackstate-implementation-and-validation-complete.md  2025-08-22_19-47Z-completion-of-task-2-3-theme-system-implementation.md  2025-08-22_20-23Z-prd-md-describes-the-requirements.md  2025-08-22_20-23Z-single-track-performance-optimization-implementation-steps.md  2025-08-22_20-34Z-completion-of-multi-track-audio-engine-task.md  2025-08-22_20-51Z-adding-doxygen-documentation-to-c++-files.md  2025-08-22_21-14Z-removing-legacy-ring-buffer-features-from-codebase.md  2025-08-22_21-38Z-installing-n8n-in-docker-on-mac.md  2025-08-22_21-50Z-setting-up-n8n-mcp-server-in-vs-code.md  2025-08-22_21-58Z-multi-track-waveform-rendering-implementation-summary.md  2025-08-22_22-14Z-layout-management-system-implementation-steps.md  2025-08-22_22-31Z-completion-of-task-3-4-track-selector-component.md  2025-08-22_22-45Z-signal-processing-modes-implementation-summary.md  2025-08-23_01-00Z-timingengine-integration-and-testing-process.md  2025-08-23_02-50Z-complete-theme-system-implementation-for-oscil-plugin.md  2025-08-23_05-04Z-implementing-advanced-signal-processing-features.md  2025-08-23_06-07Z-debugging-trigger-detection-logic-in-timingengine.md  2025-08-23_06-43Z-64-track-performance-optimization-implementation-summary.md
docs/api/: layout_manager.md
docs/design/: reorganization-summary.md
resources/shaders/: vs_line.sc
scripts/: compile_shaders.sh  embed_shaders.py  install_debug_vst3_macos.sh
src/: OscilloscopeComponent.cpp  OscilloscopeComponent.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.h
src/audio/: MeasurementData.cpp  MeasurementData.h  MultiTrackEngine.cpp  MultiTrackEngine.h  ProcessingModes.h  SignalProcessor.cpp  SignalProcessor.h  WaveformDataBridge.cpp  WaveformDataBridge.h
src/dsp/: RingBuffer.h
src/plugin/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
src/render/: AdvancedDecimationProcessor.cpp  AdvancedDecimationProcessor.h  DecimationProcessor.cpp  DecimationProcessor.h  GpuRenderHook.cpp  GpuRenderHook.h  OpenGLManager.cpp  OpenGLManager.h  OscilloscopeComponent.cpp  OscilloscopeComponent.h  OscilloscopeComponent_debug.cpp
src/state/: TrackState.cpp  TrackState.h
src/theme/: ColorTheme.cpp  ColorTheme.h  ThemeManager.cpp  ThemeManager.h
src/timing/: TimingEngine.cpp  TimingEngine.h
src/util/: PerformanceMonitor.cpp  PerformanceMonitor.h
tests/: test_64_track_performance.cpp  test_complete_theme_system.cpp  test_debug_theme.cpp  test_downsampler.cpp  test_layout_manager.cpp  test_measurement_system.cpp  test_multi_track_rendering.cpp  test_multitrack_engine.cpp  test_performance_monitor.cpp  test_performance_optimizations.cpp  test_ringbuffer.cpp  test_signal_processor.cpp  test_signal_processor_simple.cpp  test_theme_system.cpp  test_timing_engine.cpp  test_track_selector_component.cpp  test_trackstate.cpp  test_waveform_bridge.cpp
(+10 files in other folders)
